# bigdata-analysis-engineer-license

./: main.py  pyproject.toml
1. pandas/: cafe3.csv  data.csv  grouping.ipynb
2. ml/: 1. eda.ipynb  5. devide.ipynb  6. classification.ipynb  7. regression.ipynb
2. ml_test/airbnb/: airbnb.ipynb
2. ml_test/card/: card_result.csv
2. ml_test/heart/: heart.ipynb  test.csv  train.csv
3. section3/: 1. 가설검정.ipynb
4. test/: 1. pandas.ipynb  2. ml.ipynb  3. judge.ipynb  result.csv  y_test.csv
ml/: 2. preprocess.ipynb  3. encoding_point.ipynb  4.scailing.ipynb  result.csv
pandas/: basic.ipynb  cafe2.csv  cafe4.csv  date.csv  grouping.ipynb  pre_test.ipynb  test.csv  timeline.ipynb
test_section2/card/: card.ipynb
test_section2/heart/: result.csv  y_test.csv
